exercício analise nascidos vivos

--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
@@ -640,19 +640,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Frequência APGAR5\n",
+      "-------------------------\n",
       "normal              26463\n",
       "asfixia leve          320\n",
       "asfixia severa         74\n",
       "asfixia moderada       68\n",
       "Name: apgar5_cat, dtype: int64\n",
-      "(26925, 10)\n"
+      "\n",
+      "\n",
+      "Percentual Categorização APGAR5\n",
+      "----------------------------\n",
+      "normal              0.982841\n",
+      "asfixia leve        0.011885\n",
+      "asfixia severa      0.002748\n",
+      "asfixia moderada    0.002526\n",
+      "Name: apgar5_cat, dtype: float64\n"
      ]
     }
    ],
@@ -666,8 +676,17 @@
     "sinasc2.loc[(sinasc2['APGAR5'] > 5.0) & (sinasc2['APGAR5'] <= 7.0), 'apgar5_cat'] = 'asfixia leve'\n",
     "sinasc2.loc[sinasc2['APGAR5'] > 7.0, 'apgar5_cat'] = 'normal'\n",
     "\n",
+    "print('Frequência APGAR5')\n",
+    "print('-------------------------')\n",
     "print(sinasc2['apgar5_cat'].value_counts())\n",
-    "print(sinasc2.shape)"
+    "print('\\n')\n",
+    "\n",
+    "(lines, columns) = sinasc2.shape\n",
+    "\n",
+    "# percentual da categorização de APGAR5\n",
+    "print('Percentual Categorização APGAR5')\n",
+    "print('----------------------------')\n",
+    "print(sinasc2['apgar5_cat'].value_counts() / lines)"
    ]
   },
   {
