exercício analise nascidos vivos

--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios.ipynb
@@ -691,18 +691,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 249,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LOCNASC</th>\n",
+       "      <th>IDADEMAE</th>\n",
+       "      <th>ESTCIVMAE</th>\n",
+       "      <th>ESCMAE</th>\n",
+       "      <th>QTDFILVIVO</th>\n",
+       "      <th>GESTACAO</th>\n",
+       "      <th>GRAVIDEZ</th>\n",
+       "      <th>CONSULTAS</th>\n",
+       "      <th>APGAR5</th>\n",
+       "      <th>apgar5_cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   LOCNASC  IDADEMAE  ESTCIVMAE       ESCMAE  QTDFILVIVO         GESTACAO  \\\n",
+       "0        1        19        5.0  8 a 11 anos         0.0  37 a 41 semanas   \n",
+       "1        1        29        2.0  8 a 11 anos         1.0  37 a 41 semanas   \n",
+       "2        1        37        9.0  8 a 11 anos         2.0  37 a 41 semanas   \n",
+       "\n",
+       "  GRAVIDEZ  CONSULTAS  APGAR5 apgar5_cat  \n",
+       "0    Única          4    10.0     normal  \n",
+       "1    Única          4     9.0     normal  \n",
+       "2    Única          4    10.0     normal  "
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 9) seu código aqui\n",
+    "columns_name = list(sinasc2.columns)\n",
+    "\n",
+    "# sinasc2.head(3)\n",
+    "columns_lower = [name.lower() for name in columns_name]\n",
+    "columns_lower\n",
+    "\n",
+    "rename_columns = [\n",
+    "    'loc_nasc',\n",
+    "    'idade_mae',\n",
+    "    'est_civ_mae',\n",
+    "    'esc_mae',\n",
+    "    'qtd_fil_vivo',\n",
+    "    'gestacao',\n",
+    "    'gravidez',\n",
+    "    'consultas',\n",
+    "    'apgar5',\n",
+    "    'apgar5_cat'\n",
+    "]\n",
+    "\n",
+    "sinasc2.head(3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 250,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loc_nasc</th>\n",
+       "      <th>idade_mae</th>\n",
+       "      <th>est_civ_mae</th>\n",
+       "      <th>esc_mae</th>\n",
+       "      <th>qtd_fil_vivo</th>\n",
+       "      <th>gestacao</th>\n",
+       "      <th>gravidez</th>\n",
+       "      <th>consultas</th>\n",
+       "      <th>apgar5</th>\n",
+       "      <th>apgar5_cat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>29</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12 anos ou mais</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8 a 11 anos</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>37 a 41 semanas</td>\n",
+       "      <td>Única</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>normal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   loc_nasc  idade_mae  est_civ_mae          esc_mae  qtd_fil_vivo  \\\n",
+       "0         1         19          5.0      8 a 11 anos           0.0   \n",
+       "1         1         29          2.0      8 a 11 anos           1.0   \n",
+       "2         1         37          9.0      8 a 11 anos           2.0   \n",
+       "3         1         30          5.0  12 anos ou mais           0.0   \n",
+       "4         1         30          2.0      8 a 11 anos           1.0   \n",
+       "\n",
+       "          gestacao gravidez  consultas  apgar5 apgar5_cat  \n",
+       "0  37 a 41 semanas    Única          4    10.0     normal  \n",
+       "1  37 a 41 semanas    Única          4     9.0     normal  \n",
+       "2  37 a 41 semanas    Única          4    10.0     normal  \n",
+       "3  37 a 41 semanas    Única          3    10.0     normal  \n",
+       "4  37 a 41 semanas    Única          4    10.0     normal  "
+      ]
+     },
+     "execution_count": 250,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 9) seu código aqui\n"
+    "# 9) seu código aqui finalizei o código aqui\n",
+    "sinasc2.columns = rename_columns\n",
+    "sinasc2.head()"
    ]
   }
  ],
