--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -4339,10 +4339,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4353,10 +4356,467 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# dados para o dataframe\n",
+    "\n",
+    "column_cliente = ['cliente_{}'.format(n) for n in range(1, 5)]\n",
+    "\n",
+    "df1_dict = {\n",
+    "    'ID': column_cliente,\n",
+    "    'Sexo': [\"M\", \"F\", \"F\", \"M\"],\n",
+    "    'Idade': [27, 30, 24, 35],\n",
+    "    'Salario': [5000, 7000, 2700, 6500],\n",
+    "}\n",
+    "\n",
+    "df2_dict = {\n",
+    "    \"ID\": column_cliente,\n",
+    "    'Compras_M1': [0, 200, 300, 1000],\n",
+    "    'Compras_M2': [1000, 800, 300, 2000],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Compras_M1</th>\n",
+       "      <th>Compras_M2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>200</td>\n",
+       "      <td>800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  Compras_M1  Compras_M2\n",
+       "0  cliente_1           0        1000\n",
+       "1  cliente_2         200         800\n",
+       "2  cliente_3         300         300\n",
+       "3  cliente_4        1000        2000"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = pd.DataFrame(df1_dict)\n",
+    "df2 = pd.DataFrame(df2_dict)\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Salario</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID Sexo  Idade  Salario\n",
+       "0  cliente_1    M     27     5000\n",
+       "1  cliente_2    F     30     7000\n",
+       "2  cliente_3    F     24     2700\n",
+       "3  cliente_4    M     35     6500"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1_col = list(df1.columns)\n",
+    "df1_rename = [col.upper() for col in df1_col]\n",
+    "df1.columns = df1_rename\n",
+    "\n",
+    "df2_col = list(df2.columns)\n",
+    "df2_rename = [col.upper() for col in df2_col]\n",
+    "df2.columns = df2_rename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "      <th>COMPRAS_M1</th>\n",
+       "      <th>COMPRAS_M2</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>cliente_1</th>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cliente_2</th>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>200</td>\n",
+       "      <td>800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cliente_3</th>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>cliente_4</th>\n",
+       "      <td>M</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6500</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          SEXO  IDADE  SALARIO  COMPRAS_M1  COMPRAS_M2\n",
+       "ID                                                    \n",
+       "cliente_1    M     27     5000           0        1000\n",
+       "cliente_2    F     30     7000         200         800\n",
+       "cliente_3    F     24     2700         300         300\n",
+       "cliente_4    M     35     6500        1000        2000"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# merge with left join like SQL\n",
+    "df3_left_join = df1.merge(df2, on='ID', how='left')\n",
+    "df3_left_join = df3_left_join.set_index('ID')\n",
+    "df3_left_join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>COMPRAS_M1</th>\n",
+       "      <th>COMPRAS_M2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>200</td>\n",
+       "      <td>800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  COMPRAS_M1  COMPRAS_M2\n",
+       "0  cliente_1           0        1000\n",
+       "1  cliente_2         200         800\n",
+       "2  cliente_3         300         300"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# removendo uma linha do df2\n",
+    "df3 = df2.head(3)\n",
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "      <th>COMPRAS_M1</th>\n",
+       "      <th>COMPRAS_M2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>300.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID SEXO  IDADE  SALARIO  COMPRAS_M1  COMPRAS_M2\n",
+       "0  cliente_1    M     27     5000         0.0      1000.0\n",
+       "1  cliente_2    F     30     7000       200.0       800.0\n",
+       "2  cliente_3    F     24     2700       300.0       300.0\n",
+       "3  cliente_4    M     35     6500         NaN         NaN"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# left join com dados faltantes do df3\n",
+    "df1.merge(df3, on='ID', how='left')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4367,10 +4827,181 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "      <th>COMPRAS_M1</th>\n",
+       "      <th>COMPRAS_M2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>200</td>\n",
+       "      <td>800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6500</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>2000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID SEXO  IDADE  SALARIO  COMPRAS_M1  COMPRAS_M2\n",
+       "0  cliente_1    M     27     5000           0        1000\n",
+       "1  cliente_2    F     30     7000         200         800\n",
+       "2  cliente_3    F     24     2700         300         300\n",
+       "3  cliente_4    M     35     6500        1000        2000"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# merge with rigth join like SQL\n",
+    "df1.merge(df2, on='ID', how='right')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "      <th>COMPRAS_M1</th>\n",
+       "      <th>COMPRAS_M2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>200</td>\n",
+       "      <td>800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>300</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID SEXO  IDADE  SALARIO  COMPRAS_M1  COMPRAS_M2\n",
+       "0  cliente_1    M     27     5000           0        1000\n",
+       "1  cliente_2    F     30     7000         200         800\n",
+       "2  cliente_3    F     24     2700         300         300"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# right join com dados faltantes do df3\n",
+    "# nessa caso o df resultante fica com uma linha faltando porque \n",
+    "# os dados da primeira tabela que vem não tem a última linha\n",
+    "df1.merge(df3, on='ID', how='right')"
+   ]
   },
   {
    "cell_type": "markdown",
