--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -4920,7 +4920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -4991,7 +4991,7 @@
        "2  cliente_3    F     24     2700         300         300"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5007,29 +5007,192 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Full outer join"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Inner join"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df4 = df1[df1['ID'] != 'cliente_3']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>COMPRAS_M1</th>\n",
+       "      <th>COMPRAS_M2</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>200</td>\n",
+       "      <td>800</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  COMPRAS_M1  COMPRAS_M2 SEXO  IDADE  SALARIO\n",
+       "0  cliente_1           0        1000    M     27     5000\n",
+       "1  cliente_2         200         800    F     30     7000"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# inner join trazer a intersecção entre os dois \n",
+    "# vai gerar um novo dataframe a partir da coluna passada como ID que exista nos dois dfs\n",
+    "\n",
+    "df3.merge(df4, on='ID', how='inner')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Full outer join"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>COMPRAS_M1</th>\n",
+       "      <th>COMPRAS_M2</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>6500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID  COMPRAS_M1  COMPRAS_M2 SEXO  IDADE  SALARIO\n",
+       "0  cliente_1         0.0      1000.0    M   27.0   5000.0\n",
+       "1  cliente_2       200.0       800.0    F   30.0   7000.0\n",
+       "2  cliente_3       300.0       300.0  NaN    NaN      NaN\n",
+       "3  cliente_4         NaN         NaN    M   35.0   6500.0"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# união dos dois dfs\n",
+    "df3.merge(df4, on='ID', how='outer')"
+   ]
   },
   {
    "cell_type": "markdown",
