exercício analise nascidos vivos

--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -5021,7 +5021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
@@ -5046,43 +5046,43 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ID</th>\n",
-       "      <th>COMPRAS_M1</th>\n",
-       "      <th>COMPRAS_M2</th>\n",
        "      <th>SEXO</th>\n",
        "      <th>IDADE</th>\n",
        "      <th>SALARIO</th>\n",
+       "      <th>COMPRAS_M1</th>\n",
+       "      <th>COMPRAS_M2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>cliente_1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1000</td>\n",
        "      <td>M</td>\n",
        "      <td>27</td>\n",
        "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>cliente_2</td>\n",
-       "      <td>200</td>\n",
-       "      <td>800</td>\n",
        "      <td>F</td>\n",
        "      <td>30</td>\n",
        "      <td>7000</td>\n",
+       "      <td>200</td>\n",
+       "      <td>800</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          ID  COMPRAS_M1  COMPRAS_M2 SEXO  IDADE  SALARIO\n",
-       "0  cliente_1           0        1000    M     27     5000\n",
-       "1  cliente_2         200         800    F     30     7000"
+       "          ID SEXO  IDADE  SALARIO  COMPRAS_M1  COMPRAS_M2\n",
+       "0  cliente_1    M     27     5000           0        1000\n",
+       "1  cliente_2    F     30     7000         200         800"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5091,7 +5091,7 @@
     "# inner join trazer a intersecção entre os dois \n",
     "# vai gerar um novo dataframe a partir da coluna passada como ID que exista nos dois dfs\n",
     "\n",
-    "df3.merge(df4, on='ID', how='inner')"
+    "df4.merge(df3, on='ID', how='inner')"
    ]
   },
   {
@@ -5103,7 +5103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -5128,70 +5128,70 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ID</th>\n",
-       "      <th>COMPRAS_M1</th>\n",
-       "      <th>COMPRAS_M2</th>\n",
        "      <th>SEXO</th>\n",
        "      <th>IDADE</th>\n",
        "      <th>SALARIO</th>\n",
+       "      <th>COMPRAS_M1</th>\n",
+       "      <th>COMPRAS_M2</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>cliente_1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1000.0</td>\n",
        "      <td>M</td>\n",
        "      <td>27.0</td>\n",
        "      <td>5000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>cliente_2</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>800.0</td>\n",
        "      <td>F</td>\n",
        "      <td>30.0</td>\n",
        "      <td>7000.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>800.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>cliente_3</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>6500.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>cliente_4</td>\n",
+       "      <td>cliente_3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>M</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>6500.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>300.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          ID  COMPRAS_M1  COMPRAS_M2 SEXO  IDADE  SALARIO\n",
-       "0  cliente_1         0.0      1000.0    M   27.0   5000.0\n",
-       "1  cliente_2       200.0       800.0    F   30.0   7000.0\n",
-       "2  cliente_3       300.0       300.0  NaN    NaN      NaN\n",
-       "3  cliente_4         NaN         NaN    M   35.0   6500.0"
+       "          ID SEXO  IDADE  SALARIO  COMPRAS_M1  COMPRAS_M2\n",
+       "0  cliente_1    M   27.0   5000.0         0.0      1000.0\n",
+       "1  cliente_2    F   30.0   7000.0       200.0       800.0\n",
+       "2  cliente_4    M   35.0   6500.0         NaN         NaN\n",
+       "3  cliente_3  NaN    NaN      NaN       300.0       300.0"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# união dos dois dfs\n",
-    "df3.merge(df4, on='ID', how='outer')"
+    "df4.merge(df3, on='ID', how='outer')"
    ]
   },
   {
