exercício analise nascidos vivos

--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -5103,7 +5103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -5184,13 +5184,14 @@
        "3  cliente_3  NaN    NaN      NaN       300.0       300.0"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# união dos dois dfs\n",
+    "# os dados que não existirem em uma dataframe ou outro ficaram vazios (NaN)\n",
     "df4.merge(df3, on='ID', how='outer')"
    ]
   },
