--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -5204,10 +5204,401 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_temp = pd.DataFrame({\n",
+    "    'ID': ['cliente_5', 'cliente_6'],\n",
+    "    'SEXO': [\"M\", \"F\"],\n",
+    "    'IDADE': [40, 50],\n",
+    "    'SALARIO': [10000, 17500]\n",
+    "})\n",
+    "df5 = df1.head(2)\n",
+    "df6 = df1.tail(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          ID SEXO  IDADE  SALARIO\n",
+      "0  cliente_5    M     40    10000\n",
+      "1  cliente_6    F     50    17500\n",
+      "\n",
+      "          ID SEXO  IDADE  SALARIO\n",
+      "0  cliente_1    M     27     5000\n",
+      "1  cliente_2    F     30     7000\n",
+      "\n",
+      "          ID SEXO  IDADE  SALARIO\n",
+      "2  cliente_3    F     24     2700\n",
+      "3  cliente_4    M     35     6500\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_temp, end='\\n\\n')\n",
+    "print(df5, end='\\n\\n')\n",
+    "print(df6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_5</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_6</td>\n",
+       "      <td>F</td>\n",
+       "      <td>50</td>\n",
+       "      <td>17500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID SEXO  IDADE  SALARIO\n",
+       "0  cliente_5    M     40    10000\n",
+       "1  cliente_6    F     50    17500\n",
+       "0  cliente_1    M     27     5000\n",
+       "1  cliente_2    F     30     7000\n",
+       "2  cliente_3    F     24     2700\n",
+       "3  cliente_4    M     35     6500"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# concatena as tabelas pelo indice\n",
+    "df_concat = pd.concat([df_temp, df5, df6], axis=0)\n",
+    "df_concat"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_concat = pd.concat([df_temp, df5, df6], axis=1)\n",
+    "df_concat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 6, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_index = [int(value.split('_')[1]) for value in list(df_concat['ID'])]\n",
+    "list_index\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_concat['index_column'] = list_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index_column</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>cliente_5</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>cliente_6</td>\n",
+       "      <td>F</td>\n",
+       "      <td>50</td>\n",
+       "      <td>17500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     ID SEXO  IDADE  SALARIO\n",
+       "index_column                                \n",
+       "5             cliente_5    M     40    10000\n",
+       "6             cliente_6    F     50    17500\n",
+       "1             cliente_1    M     27     5000\n",
+       "2             cliente_2    F     30     7000\n",
+       "3             cliente_3    F     24     2700\n",
+       "4             cliente_4    M     35     6500"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_concat = df_concat.set_index('index_column')\n",
+    "df_concat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index_column</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>cliente_5</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>cliente_6</td>\n",
+       "      <td>F</td>\n",
+       "      <td>50</td>\n",
+       "      <td>17500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     ID SEXO  IDADE  SALARIO\n",
+       "index_column                                \n",
+       "1             cliente_1    M     27     5000\n",
+       "2             cliente_2    F     30     7000\n",
+       "3             cliente_3    F     24     2700\n",
+       "4             cliente_4    M     35     6500\n",
+       "5             cliente_5    M     40    10000\n",
+       "6             cliente_6    F     50    17500"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_concat.sort_index()"
+   ]
   },
   {
    "cell_type": "markdown",
