exercício analise nascidos vivos

--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -6009,6 +6009,8 @@
     "# aplicando append, é um método mais prático de chamar o pd.concat\n",
     "# sem a necessidade de passar o eixo\n",
     "\n",
+    "# TODO: MÉTODO VAI ENTRAR EM DESUSO\n",
+    "\n",
     "df_append = df_1.append([df_2, df_3])\n",
     "df_append"
    ]
