--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -37,11 +37,17 @@
     "#\n",
     "- **Discretas**\n",
     "    - Variáveis quantitativas Discretas têm seu domínio (conjunto de possíveis valores) enumerável. Comunente são contagens de algo\n",
-    "    - ex: Resultado de um dado, número de peixes pescado, nota em uma prova.\n",
+    "    - ex: \n",
+    "        - Resultado de um dado\n",
+    "        - Número de peixes pescado\n",
+    "        - Nota em uma prova.\n",
     "#\n",
     "- **Contínuas**\n",
     "    - Variáveis quantitativas Contínuas têm seu domínio (conjunto de possíveis valores) **não** enumerável. Em geral são medidas de um atributo físico ou subproduto de outras variáveis (médias, somas etc.) \n",
-    "    - ex: Peso, temperatura e salário.\n"
+    "    - ex: \n",
+    "        - Peso\n",
+    "        - Temperatura\n",
+    "        - Salário.\n"
    ]
   },
   {
@@ -60,8 +66,11 @@
     "        - Classe social: A, B, C, D e E\n",
     "#\n",
     "- **Nominais**\n",
-    "    - Qualitativas nominais \n",
-    "    - ex: Peso, temperatura e salário.\n"
+    "    - Qualitativas nominais são também categorias, mas sem ordem implícita.\n",
+    "    - ex:\n",
+    "        - Sabor: tamarindo, limão, groselha\n",
+    "        - Estado civil: casado, solteiro, desquitado etc\n",
+    "        - Tipo de jogo: plataforma, corrida, esporte etc\n"
    ]
   },
   {
