--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Associação entre variáveis"
+    "## 6\\.2 Matplotlib"
    ]
   },
   {
