--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -81,6 +81,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introdução ao Matplotlib\n",
+    "\n",
+    "Além de o matplotlib ser o pacote mais popular para construção de gráficos no Python, ele é a base dos métodos gráficos do pandas e também dos gráficos feitos pelo seaborne - que é uma biblioteca que fornece procedimentos práticos para a construção de gráficos mais sofisticados."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Cannot change to a different GUI toolkit: notebook. Using widget instead.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# %matplotlib inline\n",
+    "%matplotlib notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x11aa771c0>]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [1,2,3,3,2,3,4,5]\n",
+    "\n",
+    "plt.plot(data)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -95,7 +148,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.5"
   },
   "orig_nbformat": 4,
