--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -113,23 +113,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11ad877f0>]"
+       "[<matplotlib.lines.Line2D at 0x11c4e6e00>]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf3e936c8b774ebea4adb4ec0ae00302",
+       "model_id": "bebac76c28cc4a42a5d950a6d91443d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -160,13 +160,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37815685dcaa4b01b043e834bc791881",
+       "model_id": "d23e026b27e0461fb8fb4781114c0e53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x11c1c9540>]"
+       "[<matplotlib.lines.Line2D at 0x11c620460>]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
