--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -7296,7 +7296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "plt.rc('figues', figsize(10, 10))\n",
+    "plt.rc('figure', figsize(10, 10))\n",
     "\n",
     "font_options = {'family': 'monospace', 'weight': 'bold', 'size': 'small'}\n",
     "plt.rc('font', **font_options)"
