--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -2,21 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Module 6 - Descritiva I"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 6.1 Tipos de variáveis e análise univariada e bivariada"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Tipos de variáveis\n",
     "\n",
@@ -28,20 +40,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Quantitativas\n",
     "\n",
     "- Variáveis quantitativas representam quantidades. Faz sentido fazer 'contas' com elas, extrair médias, somar seus valores e etc.\n",
     "- OBS: Se dividem em **Discretas** e **Contínuas**\n",
-    "#\n",
+    "---\n",
     "- **Discretas**\n",
     "    - Variáveis quantitativas Discretas têm seu domínio (conjunto de possíveis valores) enumerável. Comunente são contagens de algo\n",
     "    - ex: \n",
     "        - Resultado de um dado\n",
     "        - Número de peixes pescado\n",
     "        - Nota em uma prova.\n",
-    "#\n",
+    "---\n",
     "- **Contínuas**\n",
     "    - Variáveis quantitativas Contínuas têm seu domínio (conjunto de possíveis valores) **não** enumerável. Em geral são medidas de um atributo físico ou subproduto de outras variáveis (médias, somas etc.) \n",
     "    - ex: \n",
@@ -52,19 +68,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Qualitativas\n",
     "\n",
     "- São 'categorias', 'classificações' ou 'qualidades' de algo. Não faz sentido fazer contas com variáveis qualitativas que não sejam baseadas em contagens\n",
-    "#\n",
+    "---\n",
     "- **Ordinais**\n",
     "    - Qualitativas ordinais possuem uma 'ordem' implícita, como:\n",
     "    - ex:\n",
     "        - Tamanho: P, M ou G\n",
     "        - Opinião: Concordo, Neutro, Discordo\n",
     "        - Classe social: A, B, C, D e E\n",
-    "#\n",
+    "---\n",
     "- **Nominais**\n",
     "    - Qualitativas nominais são também categorias, mas sem ordem implícita.\n",
     "    - ex:\n",
@@ -75,16 +95,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "## 6\\.2 Matplotlib"
+    "## 6.2 Matplotlib"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "## Introdução ao Matplotlib\n",
+    "### Introdução ao Matplotlib\n",
     "\n",
     "Além de o matplotlib ser o pacote mais popular para construção de gráficos no Python, ele é a base dos métodos gráficos do pandas e também dos gráficos feitos pelo seaborne - que é uma biblioteca que fornece procedimentos práticos para a construção de gráficos mais sofisticados."
    ]
@@ -92,7 +120,11 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -106,7 +138,11 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1105,7 +1141,11 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2093,7 +2133,11 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ax1 = fig.add_subplot(2,2,1)\n",
@@ -2105,7 +2149,11 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2125,7 +2173,11 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ax1.hist(np.random.randn(100), bins=20, color='k', alpha=0.3)\n",
@@ -2135,7 +2187,11 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.close('all')"
@@ -2144,7 +2200,11 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3131,7 +3191,11 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3151,7 +3215,11 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -3171,7 +3239,11 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -4168,6 +4240,9 @@
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
+    },
+    "pycharm": {
+     "name": "#%%\n"
     }
    },
    "outputs": [
@@ -4191,7 +4266,11 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.close('all')"
@@ -4200,7 +4279,11 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.plot?"
@@ -4209,7 +4292,11 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -5208,15 +5295,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
-    "## Tiques, rótulos e legendas"
+    "### Tiques, rótulos e legendas"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 51,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -6215,7 +6310,11 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ticks = ax.set_xticks([0, 250, 500, 750, 1000])\n",
@@ -6229,7 +6328,11 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -6250,7 +6353,11 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -7253,7 +7360,11 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -7272,14 +7383,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Salvando em Arquivos"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "plt.savefig('figpath.svg')\n",
     "plt.savefig('figpath.svg', dpi=400, bbox_inches='tight')"
@@ -7287,14 +7406,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Configuração do Matplotlib"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "plt.rc('figure', figsize(10, 10))\n",
     "\n",
